fix(about): add scroll, adjust width on mobile (#719)

--- a/src/scripts/components/main/attributions/attributions.styl
+++ b/src/scripts/components/main/attributions/attributions.styl
@@ -23,3 +23,7 @@
   a
     color: $textColor
     text-decoration: none
+
+@media screen and (max-width: 480px)
+  .attributions
+    width: 80%
